--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,15 @@ body {
     font-family: 'Noto Sans Thai', sans-serif;
     background-color: #F6F6F6;
 }
+/* add the code bellow */ 
+@layer utilities {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+   /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+  }
+}
